# tetris-cheater

./: CMakeLists.txt  Dockerfile  README.md  Toolchain-mingw64.cmake
includes/: board.h  game.h  held.h  mino.h  next_queue.h  settings.h  tetramino.h
src/: board.cpp  game.cpp  held.cpp  main.cpp  next_queue.cpp  tetramino.cpp
tools/: build_windows.sh
